src/objects/Ter_Competencia__c.object
<CustomObject>
    <description>Este objeto contiene las competencias de las EDS.</description>
    <fields>
        <fullName>Ter_Codigo_unico__c</fullName>
        <description>Este campo contiene el código único de la EDS competencia.</description>
        <formula>Ter_Nombre_EDS__r.Ter_Codigo_unico__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código único</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Marca__c</fullName>
        <description>Este campo contiene la marca de la EDS competencia.</description>
        <formula>IF(ISPICKVAL(Ter_Nombre_EDS__r.Ter_Marca__c, &quot;Terpel&quot;), &quot;Terpel&quot;,
IF(ISPICKVAL(Ter_Nombre_EDS__r.Ter_Marca__c, &quot;Esso&quot;), &quot;Esso&quot;,
IF(ISPICKVAL(Ter_Nombre_EDS__r.Ter_Marca__c, &quot;Mobil&quot;), &quot;Mobil&quot;,
IF(ISPICKVAL(Ter_Nombre_EDS__r.Ter_Marca__c, &quot;Texaco&quot;), &quot;Texaco&quot;,
IF(ISPICKVAL(Ter_Nombre_EDS__r.Ter_Marca__c, &quot;Petrobrás&quot;), &quot;Petrobrás&quot;,
IF(ISPICKVAL(Ter_Nombre_EDS__r.Ter_Marca__c, &quot;Petromil&quot;), &quot;Petromil&quot;,
IF(ISPICKVAL(Ter_Nombre_EDS__r.Ter_Marca__c, &quot;Brio&quot;), &quot;Brio&quot;,
IF(ISPICKVAL(Ter_Nombre_EDS__r.Ter_Marca__c, &quot;Biomax&quot;), &quot;Biomax&quot;,
IF(ISPICKVAL(Ter_Nombre_EDS__r.Ter_Marca__c, &quot;Puma&quot;), &quot;Puma&quot;,
IF(ISPICKVAL(Ter_Nombre_EDS__r.Ter_Marca__c, &quot;Zeuss&quot;), &quot;Zeuss&quot;,
&quot;NA&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marca</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Nombre_EDS__c</fullName>
        <description>Este campo corresponde a la asociación de la EDS.</description>
        <label>Nombre EDS</label>
        <referenceTo>Ter_Estacion_de_Servicio__c</referenceTo>
        <relationshipLabel>Competencias</relationshipLabel>
        <relationshipName>Competencias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ter_Nombre_EDS_competencia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ter_Nombre_EDS_competencia</description>
        <label>Nombre EDS competencia</label>
        <referenceTo>Ter_Estacion_de_Servicio__c</referenceTo>
        <relationshipLabel>Competencias (Nombre EDS competencia)</relationshipLabel>
        <relationshipName>Competencias1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Competencia</label>
    <nameField>
        <displayFormat>COM-{000000}-{DD}{MM}{YYYY}</displayFormat>
        <label>No. Competencia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competencias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>